--- a/src/sections/portfolio/projects/code-gear.html
+++ b/src/sections/portfolio/projects/code-gear.html
@@ -1,6 +1,6 @@
 <div class="portfolio__wrapper to-left">
   <div class="portfolio__card-block" data-reveal="right">
-    <h5 class="portfolio__card-subtitle">FullStack Project <span> [In development]</span></h5>
+    <h5 class="portfolio__card-subtitle">SUPER FullStack Project <span> [Microfrontend + FSD]</span></h5>
     <h3 class="portfolio__card-title">CodeGear - Online Code Editor</h3>
     <div class="portfolio__card-description" data-href="https://github.com/Gearonix/CodeGear">
       <p>
@@ -18,12 +18,15 @@
     </div>
     <div class="portfolio__card-tags">
       <span>Preact</span>
+      <span>Microservices</span>
+      <span>Nginx</span>
       <span>Eslint/Prettier</span>
       <span>Mobx</span>
       <span>PWA</span>
       <span>Typescript</span>
       <span>Apollo</span>
       <span>GraphQL</span>
+      <span>Vitepress</span>
       <span>Passport JWT</span>
       <span>Feature-Sliced-Design</span>
       <span>Nest.js</span>
@@ -32,6 +35,7 @@
       <span>Eslint-kit</span>
       <span>Cypress</span>
       <span>RTL</span>
+      <span>Docker</span>
     </div>
     <div class="portfolio__card-icons">
       <div class="portfolio__card-icon" data-href="https://github.com/Gearonix/CodeGear">
