--- a/src/sections/portfolio/projects/space-calendar.html
+++ b/src/sections/portfolio/projects/space-calendar.html
@@ -1,6 +1,6 @@
 <div class="portfolio__wrapper to-left">
     <div class="portfolio__card-block" data-reveal>
-        <h5 class="portfolio__card-subtitle">FullStack Project</h5>
+        <h5 class="portfolio__card-subtitle">FullStack Project [React + Express]</h5>
         <h3 class="portfolio__card-title">Space Calendar</h3>
         <div class="portfolio__card-description" data-href="space-calendar">
             <p>
