--- a/src/sections/portfolio/projects/ulbi-production.html
+++ b/src/sections/portfolio/projects/ulbi-production.html
@@ -7,12 +7,11 @@
         </div>
     </div>
     <div class="portfolio__card-block" data-reveal="right">
-        <h5 class="portfolio__card-subtitle">FullStack Project</h5>
+        <h5 class="portfolio__card-subtitle">FullStack Project [React + Webpack + Babel]</h5>
         <h3 class="portfolio__card-title">Ulbi Production Project</h3>
         <div class="portfolio__card-description" data-href="https://github.com/Gearonix/Ulbi-Production">
             <p>
-                Project made on <em>Timur Ulbi's</em>
-                course (Advanced Frontend. In production on React).
+                Project made with <em>Timur Ulbi's</em> (Advanced Frontend. In production on React).
                 The project includes full <em>Webpack configuration</em>,
                 CI basics, component testing,
                 <em>refactoring</em>,
