--- a/src/sections/portfolio/portfolio.html
+++ b/src/sections/portfolio/portfolio.html
@@ -27,7 +27,7 @@
         </div>
         <h4 class="h4 section-title" data-reveal style="margin-top: 25px">Small projects and freelance</h4>
         <p class="section-description" data-reveal>There are some small and commercial projects here.
-        <div class="portfolio__grid">
+        <div class="portfolio__list portfolio__grid">
             @@include('additional/forhair-shop.html')
             @@include('additional/datacolon-ru.html')
         </div>
