--- a/src/sections/portfolio/projects/adonis-ecommerce.html
+++ b/src/sections/portfolio/projects/adonis-ecommerce.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="portfolio__card-block" data-reveal="right">
-    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
+    <h5 class="portfolio__card-subtitle">FullStack Project [Next.js + Nest.js]</h5>
     <h3 class="portfolio__card-title">Adonis Ecommerce</h3>
     <div class="portfolio__card-description" data-href="adonis-ecommerce">
       <p>
