--- a/src/sections/portfolio/projects/grnx-utils.html
+++ b/src/sections/portfolio/projects/grnx-utils.html
@@ -1,6 +1,6 @@
 <div class="portfolio__wrapper to-left">
   <div class="portfolio__card-block" data-reveal="right">
-    <h5 class="portfolio__card-subtitle library">Collection of libraries</h5>
+    <h5 class="portfolio__card-subtitle library">Collection of libraries [Nx monorepo]</h5>
     <h3 class="portfolio__card-title">@grnx-utils</h3>
     <div class="portfolio__card-description" data-href="https://github.com/Gearonix/grnx-utils">
       <p>
