--- a/src/sections/portfolio/projects/pixel-playground.html
+++ b/src/sections/portfolio/projects/pixel-playground.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="portfolio__card-block" data-reveal="right">
-    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
+    <h5 class="portfolio__card-subtitle">FullStack Project [Vue.js + Effector / Fastify]</h5>
     <h3 class="portfolio__card-title">Pixel Playground</h3>
     <div class="portfolio__card-description" data-href="https://pixelplayground.pro/#/">
       <p>
