--- a/src/sections/portfolio/projects/code-gear.html
+++ b/src/sections/portfolio/projects/code-gear.html
@@ -1,19 +1,19 @@
 <div class="portfolio__wrapper to-left">
   <div class="portfolio__card-block" data-reveal="right">
-    <h5 class="portfolio__card-subtitle">SUPER FullStack Project <span> [Microfrontend + FSD]</span></h5>
+    <h5 class="portfolio__card-subtitle">FullStack Project <span> [Microfrontend + FSD]</span></h5>
     <h3 class="portfolio__card-title">CodeGear - Online Code Editor</h3>
-    <div class="portfolio__card-description" data-href="https://github.com/Gearonix/CodeGear">
+    <div class="portfolio__card-description" data-href="code-gear/docs">
       <p>
         Online <em>code editor</em>, with the ability to run code in 10 languages,
         customize the theme and languages, work in <em>real time</em> with other users.
         Used <em>Nx</em> to manage a mono-repository, <em>GraphQL</em>
         to communicate between
-        the server and the client. for
-        At the moment the project is <em>under development</em>.
+        the server and the client. This project is more about <em>how</em> it is made than what it can do.
+        Check out the <em>documentation</em> to learn more about the project.
       </p>
       <div class="portfolio__card-time">
         <img src="_static/images/icons/clock.svg" alt="Clock">
-        <span>In development</span>
+        <span>4,5 months</span>
       </div>
     </div>
     <div class="portfolio__card-tags">
@@ -41,9 +41,12 @@
       <div class="portfolio__card-icon" data-href="https://github.com/Gearonix/CodeGear">
         <img src="_static/images/icons/github.svg" alt="Github">
       </div>
+      <div class="portfolio__card-icon" data-href="code-gear/docs">
+        <img src="_static/images/icons/link.svg" alt="Portfolio">
+      </div>
     </div>
   </div>
-  <div class="portfolio__card code-gear" data-reveal="left" data-href="https://github.com/Gearonix/CodeGear">
+  <div class="portfolio__card code-gear" data-reveal="left" data-href="code-gear/docs">
     <div class="portfolio__card-background"></div>
     <div class="portfolio__card-text">
       <h3>CodeGear</h3>
