added virtual-flow project, updates:

--- a/src/sections/portfolio/portfolio.html
+++ b/src/sections/portfolio/portfolio.html
@@ -5,9 +5,10 @@
             applications and libraries <br/>
             made using modern technologies.</p>
         <div class="portfolio__list">
-            @@include('projects/adonis-ecommerce.html')
             @@include('projects/code-gear.html')
+            @@include('projects/adonis-ecommerce.html')
             @@include('projects/grnx-utils.html')
+            @@include('projects/virtual-flow.html')
             @@include('projects/pixel-playground.html')
             @@include('projects/ulbi-production.html')
             @@include('projects/space-calendar.html')
